feat： 定时器动画效果对比title优化

--- a/timer-animation.html
+++ b/timer-animation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>定时器动画效果对比</title>
     <style>
         .opt {
             display: flex;
